feat(main): springai